Fix admin toolbar overlapping page content

--- a/esp/public/media/default_styles/admin_bar.css
+++ b/esp/public/media/default_styles/admin_bar.css
@@ -33,40 +33,22 @@
 #user_search_submit,
 #class_search_submit {
 	display: inline-block;
-	*display: inline;
-	*zoom: 1;
 	padding: 4px 10px 4px;
 	margin-bottom: 0;
 	font-size: 13px;
 	line-height: 18px;
-	*line-height: 20px;
 	color: #333333;
 	text-align: center;
 	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
 	vertical-align: middle;
 	cursor: pointer;
 	background-color: #f5f5f5;
-	background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
-	background-image: -ms-linear-gradient(top, #ffffff, #e6e6e6);
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
-	background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
-	background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
-	background-image: linear-gradient(top, #ffffff, #e6e6e6);
+	background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
 	background-repeat: repeat-x;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);
-	border-color: #e6e6e6 #e6e6e6 #bfbfbf;
 	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-	*background-color: #e6e6e6;
-	filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
 	border: 1px solid #cccccc;
-	*border: 0;
 	border-bottom-color: #b3b3b3;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
 	border-radius: 4px;
-	*margin-left: .3em;
-	-webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .2), 0 1px 2px rgba(0, 0, 0, .05);
-	-moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .2), 0 1px 2px rgba(0, 0, 0, .05);
 	box-shadow: inset 0 1px 0 rgba(255, 255, 255, .2), 0 1px 2px rgba(0, 0, 0, .05);
 }
 
@@ -94,8 +76,6 @@
 	border-width: 1px;
 	border-color: #000000;
 	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
 	font-size: 13px;
 	vertical-align: middle;
 	padding: 4px;
@@ -109,8 +89,6 @@
 	border-width: 1px;
 	border-color: #000000;
 	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
 	font-size: 13px;
 	vertical-align: middle;
 	padding: 4px;
@@ -126,8 +104,6 @@
 
 .input-append .add-on:last-child,
 .input-append .btn:last-child {
-	-webkit-border-radius: 0 3px 3px 0;
-	-moz-border-radius: 0 3px 3px 0;
 	border-radius: 0 3px 3px 0;
 }
 
@@ -136,8 +112,6 @@
 .input-prepend .btn,
 .input-append .btn {
 	margin-left: -1px;
-	-webkit-border-radius: 0;
-	-moz-border-radius: 0;
 	border-radius: 0;
 }
 
